# tsp-law-updater

./: README.md  pyproject.toml
tests/: conftest.py  test_tsplawupdater.py  test_utils.py
tsplawupdater/: config.toml  info.py  tsplawupdater.py  utils.py
